<resources>
    <string name="app_name">Car312Award</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="title_activity_login">SignIn&amp;SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_message">Sign in please</string>
    <string name="sign_up">sign up</string>
    <string name="sign_up_button_text">sign up</string>
    <string name="username_hint">Username</string>
    <string name="prompt_password_again">Password again</string>
    <string name="do_not_have_accaunt">Нет Аккаутнта?</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="last_searched">Last searched</string>
    <string name="votes_display">votes </string>
    <string name="plus_display">+</string>
    <string name="minus_display">-</string>
    <string name="newNum">(new)</string>
    <string name="latest_search">Latest search</string>
    <string name="search_result">Search Result</string>
    <string name="settings">Settings</string>
    <string name="votes">Votes</string>
    <string name="profile_setting">Profile setting</string>
    <string name="about">About</string>
    <string name="number">NUMBER</string>
    <string name="_0">+0</string>
    <string name="submit">submit</string>
    <string name="about_text">This application was developed by volonteers for improving behavior of drivers in Bishkek</string>
    <string name="for_more_information">For more information</string>
    <string name="contacts">Instagram: @driver_bishkek   Telegram: @driver_bishkek</string>
    <string name="user">User</string>
    <string name="review">Отзыв(необязвтельно)</string>
    <string name="back">Back</string>
    <string name="_123">123</string>
    <string name="apply">Apply</string>
    <string name="by_values">By Values</string>
    <string name="by_plus">By Plus</string>
    <string name="by_minus">By Minus</string>
    <string name="download_failed">download failed</string>
    <string name="time_limit_vote_message">Голосовать за номнер можно не чаще чем раз в 10 мин</string>
</resources>
