<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="kg.flaterlab.vv.data.model.User"/>
    </data>


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/light_gray"
                android:elevation="4dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="151dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="17dp"
                    android:text="@{user.name}"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/open_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />
            <TextView
                android:id="@+id/open_profile_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_setting"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />
            <TextView
                android:id="@+id/open_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/votes"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/open_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginTop="20dp"
                android:textSize="18sp"/>


        </LinearLayout>
    </LinearLayout>



</layout>