<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vote.NumberVoteActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_num_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/number"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/votes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textColor="#3CC501" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textColor="#F50000" />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>
        <RelativeLayout
            android:id="@+id/vote_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/rating_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="50sp"
                    android:layout_marginTop="30dp"/>

               <RadioGroup
                   android:id="@+id/radio_buuton_group"
                   android:layout_width="wrap_content"
                   android:layout_height="60dp"
                   android:orientation="horizontal"
                   android:layout_gravity="center_vertical"
                   android:layout_marginTop="10dp">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="- "
                       android:textSize="40sp"
                       android:textColor="#F50000"/>
                   <RadioButton
                       android:id="@+id/r_b_minus3"
                       android:layout_marginTop="-5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />
                   <RadioButton
                       android:id="@+id/r_b_minus2"
                       android:layout_marginTop="-5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />
                   <RadioButton
                       android:id="@+id/r_b_minus1"
                       android:layout_marginTop="-5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />
                   <RadioButton
                       android:id="@+id/r_b_plus1"
                       android:layout_marginTop="-5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />
                   <RadioButton
                       android:id="@+id/r_b_plus2"
                       android:layout_marginTop="-5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />
                   <RadioButton
                       android:id="@+id/r_b_plus3"
                       android:layout_marginTop="-5dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text=" +"
                       android:textSize="30sp"
                       android:textColor="#3CC501"/>
               </RadioGroup>
                <EditText
                    android:id="@+id/review_on_vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="244"
                    android:hint="@string/review" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">
                    <Button
                        android:id="@+id/submit_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/submit"
                        android:backgroundTint="#000"
                        android:textColor="#FFF"
                        android:layout_marginTop="30dp" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/information_for_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="161dp"
                android:layout_marginEnd="155dp"
                android:visibility="gone"/>
        </RelativeLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.3"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24px" />
</androidx.constraintlayout.widget.ConstraintLayout>